<resources>
    <string name="app_name">Game Master Utility</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_codex_button">Codex</string>
    <string name="menu_gametools_button">Game Tools</string>
    <string name="menu_characterManager_button">Character Manager</string>
    <string name="codex_title">Codex</string>
    <string name="codex_monsterBestiary_button">Monster Bestiary</string>
    <string name="codex_playableRaces_button">Playable Races</string>
    <string name="codex_playableClasses_button">Playable Classes</string>
    <string name="gameTools_title">Game Tools</string>
    <string name="gameTools_rollSimulator_button">Roll Simulator</string>
    <string name="gameTools_randomSessionGenerator_button">Random Session Generator</string>
    <string name="gameTools_battleSimulator_button">Battle Simulator</string>
    <string name="characterManager_title">Character Manager</string>
    <string name="characterManager_characterList_button">Character List</string>
    <string name="characterManager_characterCreate_button">Character Creator</string>
    <string name="app_label">Game Master Utility</string>
    <string name="search_hint">Search created characters</string>
    <string-array name="bestiary_spinner">
        <item>Beholder</item>
        <item>Flumph</item>
        <item>Gelatinous Cube</item>
        <item>Lich</item>
        <item>Mind Flayer</item>
        <item>Ogre</item>
        <item>Owlbear</item>
        <item>Red Dragon</item>
        <item>Skeleton</item>
        <item>Tarrasque</item>
    </string-array>
    <string-array name="species_spinner">
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Genasi</item>
        <item>Goblin</item>
        <item>Hobgoblin</item>
        <item>Human</item>
        <item>Tiefling</item>
        <item>Tortle</item>
        <item>Warforged</item>
    </string-array>
    <string-array name="classes_spinner">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="battlesimcharacterspinnerDEMO">
        <item>Jorge</item>
        <item>Drax</item>
        <item>Rem</item>
    </string-array>
    <string-array name="battlesimmonsterspinner">
        <item>Flumph</item>
        <item>Goblin</item>
        <item>Owlbear</item>
        <item>Ogre</item>
        <item>Beholder</item>
    </string-array>
</resources>